[gd_scene load_steps=4 format=3 uid="uid://cq1eje456ok7a"]

[ext_resource type="Script" path="res://scripts/UI/map_switch.gd" id="1_721q2"]
[ext_resource type="Script" path="res://scripts/UI/map_updater.gd" id="1_skgs8"]
[ext_resource type="Script" path="res://scripts/once/map_gen.gd" id="2_q3e6x"]

[node name="Control_Map" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skgs8")

[node name="Control_MapGen" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 1920.0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("2_q3e6x")

[node name="HSplit_Map" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 150
script = ExtResource("1_721q2")

[node name="Control_Map" type="Control" parent="HSplit_Map"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control_Buffer" type="Control" parent="HSplit_Map/Control_Map"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid_Explore" type="GridContainer" parent="HSplit_Map/Control_Map/Control_Buffer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
columns = 3

[node name="Button_NW" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox_Tile" type="VBoxContainer" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore/Button_NW"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_Tile" type="Label" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore/Button_NW/VBox_Tile"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid_Actions" type="GridContainer" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore/Button_NW/VBox_Tile"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="Button_N" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_NE" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_W" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_self" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_E" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_SW" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_S" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button_SE" type="Button" parent="HSplit_Map/Control_Map/Control_Buffer/Grid_Explore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Grid_Conts" type="GridContainer" parent="HSplit_Map/Control_Map/Control_Buffer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="Scroll_World" type="ScrollContainer" parent="HSplit_Map/Control_Map/Control_Buffer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid_World" type="GridContainer" parent="HSplit_Map/Control_Map/Control_Buffer/Scroll_World"]
layout_mode = 2
columns = 45

[node name="Tab_Map" type="TabContainer" parent="HSplit_Map"]
layout_mode = 2
size_flags_horizontal = 3
tab_alignment = 2

[node name="World" type="Control" parent="HSplit_Map/Tab_Map"]
layout_mode = 2

[node name="Continent" type="Control" parent="HSplit_Map/Tab_Map"]
visible = false
layout_mode = 2

[node name="Explore" type="VBoxContainer" parent="HSplit_Map/Tab_Map"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="tab_clicked" from="HSplit_Map/Tab_Map" to="HSplit_Map" method="_on_tab_map_tab_clicked"]
